--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 llama-index
+llama-index-cli
+llama-index-core
+llama-index-embeddings-huggingface
+llama-index-llms-openai-like
 llama-index-tools-tavily-research
 dateparser
